--- a/website/src/layouts/Layout.astro
+++ b/website/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ const { title, description,} = Astro.props;
 	<body>
 		<Header />
 		<slot />
-		<!-- <Footer /> -->
+		<Footer />
 	</body>
 </html>
 <style is:global>
