--- a/website/src/components/BoxsHome.astro
+++ b/website/src/components/BoxsHome.astro
@@ -2,24 +2,27 @@
 
 
 ---
-<div class="flex justify-between items-center mx-32 mt-28">      
-    <div class="rounded-lg flex flex-col justify-center items-center bg-boxshome w-[380px] py-5">
-        <div class="color text-8xl">+
+<div class="flex flex-col gap-20 xl:flex-row justify-center xl:gap-20 items-center xl:mx-32 mt-28">      
+    <div class="rounded-lg flex flex-col justify-center items-center bg-boxshome px-10 py-10">
+        <div class="color text-8xl flex md:w-auto w-full">
+            <p>+</p>
             <small class="color text-8xl" id="counter-years">0</small>
         </div>
         <small class="text-white text-3xl">AÑOS EN LA</small>
         <small class="text-white text-3xl">INDUSTRIA</small>
 
     </div>
-    <div class="rounded-lg flex flex-col justify-center items-center bg-boxshome w-[380px] py-5">
-        <div class="color text-8xl">+
+    <div class="rounded-lg flex flex-col justify-center items-center bg-boxshome px-20 py-10">
+        <div class="color text-8xl flex">
+            <p>+</p>
             <small class="color text-8xl" id="counter-works">0</small>
         </div>
         <small class="text-white text-3xl">TRABAJOS</small>
         <small class="text-white text-3xl">REALIZADOS</small>
     </div>
-    <div class="rounded-lg flex flex-col justify-center items-center bg-boxshome w-[380px] py-5">
-        <div class="color text-8xl">%
+    <div class="rounded-lg flex flex-col justify-center items-center bg-boxshome px-20 py-10">
+        <div class="color text-8xl flex">
+            <p>%</p>
             <small class="color text-8xl" id="counter-quality">0</small>
         </div>
         <small class="text-white text-3xl">CALIDAD Y</small>
@@ -46,7 +49,7 @@
 
     }
     Counters("counter-years", 25);
-    Counters("counter-works", 500);
+    Counters("counter-works", 200);
     Counters("counter-quality", 100);
 </script>
 <style>
