--- a/website/src/components/Footer.astro
+++ b/website/src/components/Footer.astro
@@ -3,29 +3,38 @@ import Instagram from "./Icons/Instagram.astro"
 import Linkedin from "./Icons/Linkedin.astro"
 import Whatsapp from "./Icons/Whatsapp.astro"
 import Facebook from "./Icons/Facebook.astro"
-import Iweb from "./Icons/Iweb.astro"
 import Logo from "./Icons/Logo.astro"
+import Iweb from "./Icons/Iweb.astro"
+
 ---
 
 <footer class="flex flex-col">
     <div class="py-2 flex flex-col bg-footer">
-    <h6 class="text-white mb-2 text-center text-[30px]">Tambien podes contactarnos a traves de</h6>
-        <ul class="flex justify-center gap-x-32 mb-3">
-            <li>
-                <Instagram />
-            </li>
-            <li>
-                <Whatsapp/>
-            </li>
-            <li>
-                <Facebook />
-            </li>
-            <li>
-                <Linkedin />
-            </li>
+    <h6 class="text-white mb-2 text-center md:text-[30px]">Tambien podes contactarnos a traves de</h6>
+        <ul class="flex flex-col items-center gap-5 md:flex-row md:justify-center gap-x-32 mb-3">
+            <a target="_blank" href="https://www.instagram.com/iweb.cmc/">
+                <li>
+                    <Instagram />
+                </li>
+            </a>
+            <a target="_blank" href="https://www.instagram.com/iweb.cmc/">
+                <li>
+                    <Whatsapp/>
+                </li>
+            </a>
+            <a target="_blank" href="https://www.facebook.com/iweb.cmc/">
+                <li>
+                    <Facebook />
+                </li>
+            </a>
+                <a target="_blank" href="https://www.linkedin.com/iweb.cmc/">
+                    <li>
+                        <Linkedin />
+                    </li>
+                </a>
         </ul>
     </div>
-    <div class="flex justify-between items-center">
+    <div class="flex flex-col md:flex-row md:gap-0 gap-5 justify-between items-center pl-3">
         <span>@2024 CMC - Todos los derechos reservados</span>
         <Logo class="w-20" />
         <div class="flex items-center text-md">
