--- a/website/src/layouts/Layout.astro
+++ b/website/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const { title, description,} = Astro.props;
 		<meta name="keywords" content="hola">
 		<meta name="description" content={description} />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" type="image/svg+xml" href="public/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
@@ -31,5 +31,6 @@ const { title, description,} = Astro.props;
 <style is:global>
 	html {
 		height: 100%;
+		scroll-behavior: smooth;
 	}
 </style>
