--- a/website/src/components/Footer.astro
+++ b/website/src/components/Footer.astro
@@ -11,25 +11,29 @@ import Iweb from "./Icons/Iweb.astro"
 <footer class="flex flex-col">
     <div class="py-2 flex flex-col bg-footer">
     <h6 class="text-white mb-2 text-center md:text-[30px]">Tambien podes contactarnos a traves de</h6>
-        <ul class="flex flex-col items-center gap-5 md:flex-row md:justify-center gap-x-32 mb-3">
+        <ul class="flex flex-col items-center gap-5 md:flex-row justify-between md:justify-center gap-x-32 mb-3">
             <a target="_blank" href="https://www.instagram.com/iweb.cmc/">
-                <li>
+                <li class="flex gap-5 justify-center items-center text-white">
                     <Instagram />
+                    <p>Instagram</p>
                 </li>
             </a>
             <a target="_blank" href="https://www.instagram.com/iweb.cmc/">
-                <li>
+                <li class="flex gap-5 justify-center items-center text-white">
                     <Whatsapp/>
+                    <p>Whatsapp</p>
                 </li>
             </a>
             <a target="_blank" href="https://www.facebook.com/iweb.cmc/">
-                <li>
+                <li class="flex gap-5 justify-center items-center text-white">
                     <Facebook />
+                    <p>Facebook</p>
                 </li>
             </a>
                 <a target="_blank" href="https://www.linkedin.com/iweb.cmc/">
-                    <li>
+                    <li class="flex gap-5 justify-center items-center text-white">
                         <Linkedin />
+                        <p>Linkedin</p>
                     </li>
                 </a>
         </ul>
