--- a/website/src/pages/index.astro
+++ b/website/src/pages/index.astro
@@ -38,7 +38,7 @@ import Energia from '../components/Icons/Energia.astro';
     <h2 class="bg-white text-[35px] text-center py-4">Nuestros trabajos especializados
     </h2> 
     <section id="works-esp" class="gap-0 w-full h-[900px] text-white place-items-center text-center flex flex-col md:grid grid-cols-[repeat(2,1fr)] grid-rows-[repeat(2,1fr)]">
-        <div class="border border-black boxs-works bg-[url('public/imgs/works/1.png')] text-white">
+        <div class="boxs-works bg-[url('public/imgs/works/1.png')] text-white">
             <div class="uno ">
                 <div class="relative z-50">
                     <small class="absolute top-24 left-10 text-8xl">1</small>
@@ -46,7 +46,7 @@ import Energia from '../components/Icons/Energia.astro';
                 </div>
             </div>
         </div>
-        <div class="border border-black boxs-works bg-[url('public/imgs/works/2.png')] text-white">
+        <div class="boxs-works bg-[url('public/imgs/works/2.png')] text-white">
             <div class="dos">
                 <div class="relative z-50">
                     <small class="absolute top-24 right-10 text-8xl">2</small>
@@ -54,7 +54,7 @@ import Energia from '../components/Icons/Energia.astro';
                 </div>
             </div>
         </div>
-        <div class="border border-black boxs-works bg-[url('public/imgs/works/3.png')] text-white">
+        <div class="boxs-works bg-[url('public/imgs/works/3.png')] text-white">
             <div class="tres">
                 <div class="relative z-50">
                     <small class="absolute top-24 left-10 text-8xl">3</small>
@@ -62,7 +62,7 @@ import Energia from '../components/Icons/Energia.astro';
                 </div>
             </div>
         </div>
-        <div class="border border-black boxs-works bg-[url('public/imgs/works/4.png')] text-white">
+        <div class="boxs-works bg-[url('public/imgs/works/4.png')] text-white">
             <div class="cuatro">
                 <div class="relative z-50">
                     <small class="absolute top-24 right-10 text-8xl">4</small>
@@ -78,7 +78,7 @@ import Energia from '../components/Icons/Energia.astro';
         </div>
     </section>
     <section id="benefits">
-        <h4 class="text-[35px] text-center">Beneficios de construir en seco
+        <h4 class="text-[35px] pt-8 text-center">Beneficios de construir en seco
         </h4>
         <div class="my-10 gap-y-12 mx-5 md:grid flex flex-col justify-center items-center md:place-items-center gap-x-5 md:grid-cols-[repeat(auto-fill,minmax(400px,1fr))]">
             <div class="px-3 py-6 rounded-xl bg-boxs-benefits w-[300px] h-[250px] flex flex-col justify-around items-center bg-black text-white">
