--- a/website/src/components/Footer.astro
+++ b/website/src/components/Footer.astro
@@ -41,10 +41,13 @@ import Iweb from "./Icons/Iweb.astro"
     <div class="flex flex-col md:flex-row md:gap-0 gap-5 justify-between items-center pl-3">
         <span>@2024 CMC - Todos los derechos reservados</span>
         <Logo class="w-20" />
-        <div class="flex items-center text-md">
+        <a 
+        href="https://www.iwebtecnology.com"
+        target="_blank"
+        class="flex items-center text-md">
             <span>Desarrollado por</span>
             <Iweb />
-        </div>
+        </a>
     </div>
 </footer>
 <style>
